--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.android.sunshine.app"
+        applicationId "bruno.udacity.com.sunshinewear"
         minSdkVersion 10
         targetSdkVersion 24
         versionCode 1
@@ -25,6 +25,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-annotations:24.0.0'
     compile 'com.android.support:support-v4:24.0.0'
